web/src/components/netflow-traffic.css
.actions {
    display: flex;
    flex-direction: row;
    align-items: baseline;
}

/*hack to keep refresh button size while loading*/

.co-action-refresh-button {
    width: 45px !important;
    height: 33px !important;
}

span.pf-c-button__icon.pf-m-start {
    width: 14px;
    display: flex;
}

/*rotate animation for loading icon*/

@keyframes spin {
    from {
        transform: rotate(0deg);
    }

    to {
        transform: rotate(360deg);
    }
}

/*allow new lines for error text*/

.pf-c-empty-state__body {
    white-space: pre-line;
}

/*FIXME: remove this override if a better solution for scrolling content is found with the console team*/
#pageSection {
    display: flex;
    flex-direction: column;
    max-height: 90vh;
}

#drawer {
    z-index: 0;
}

/* flex page header */
#pageHeader {
    display: flex;
    flex-direction: row;
    margin-bottom: 10px;
    padding-right: var(--pf-global--spacer--md);
}

.flex {
    flex: 1;
}

